fix:(home) fixed the card croppin issue

--- a/src/Styles/ProductCard.css
+++ b/src/Styles/ProductCard.css
@@ -163,7 +163,7 @@
 
 .product-card__wishlist-button {
   position: relative;
-  top: -3px;
+  top: 0.5rem;
   right: 0.5rem;
   background: rgba(255, 255, 255, 0.9);
   border: none;
@@ -176,7 +176,6 @@
   cursor: pointer !important;
   transition: all 0.2s ease-in-out;
   z-index: auto !important;
-  border:1px solid rgb(214, 214, 214);
 }
 
 .product-card__wishlist-button:hover {
